--- a/Northwind.Application/Views/Employees/Create.cshtml
+++ b/Northwind.Application/Views/Employees/Create.cshtml
@@ -35,7 +35,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">
+        <form id="form" asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <label class="control-label">Picture</label>
             <div class="form-group">
@@ -112,15 +112,12 @@
                 <label asp-for="ReportsTo" class="control-label"></label>
                 <select asp-for="ReportsTo" class ="form-control" asp-items="ViewBag.ReportsTo"></select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
         </form>
+        <div style="padding-top:20px;">
+            <input form="form" type="submit" value="Create" class="btn btn-primary" />
+            <a asp-action="Index" class="btn btn-primary float-end">Back to List</a>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 <script src="~/js/fileSelection.js"></script>
