--- a/Northwind.Application/Views/Employees/Details.cshtml
+++ b/Northwind.Application/Views/Employees/Details.cshtml
@@ -117,11 +117,11 @@
             Reports To
         </dt>
         <dd class = "col-sm-10">
-            <a asp-action="Details" asp-route-id="@Model.ReportsTo">
+            <a asp-action="Details" asp-route-id="@Model.ReportsTo" class="fw-bold">
                 @Html.DisplayFor(model => model.ReportsToNavigation.FirstName) @Html.DisplayFor(model => model.ReportsToNavigation.LastName)
             </a>
         </dd>
     </dl>
 </div>
-<button class="btn btn-primary" onclick="location.href = '@Url.ActionLink("Edit", $"{guest}Employees", new { id = Model.EmployeeId })'">Edit</button>
-<a asp-action="Index" class="float-end fw-bold">Back to List</a>
+<button class="btn btn-primary fw-bold" onclick="location.href = '@Url.ActionLink("Edit", $"{guest}Employees", new { id = Model.EmployeeId })'">Edit</button>
+<a asp-action="Index" class="btn btn-primary float-end fw-bold">Back to List</a>
