--- a/Northwind.Application/Views/Products/Details.cshtml
+++ b/Northwind.Application/Views/Products/Details.cshtml
@@ -50,23 +50,23 @@
             @Html.DisplayNameFor(model => model.Discontinued)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Discontinued)
+            @Model.Discontinued
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.CategoryName)
+            @(Model.Category == null ? "" : Model.Category.CategoryName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Supplier)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Supplier.CompanyName)
+            @(Model.Supplier == null ? "" : Model.Supplier.CompanyName)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ProductId">Edit</a>
-    <button onclick="location.href = '@Url.ActionLink("Index", $"Products", new { categoryId = Model.CategoryId })'" class="btn btn-primary float-end fw-bold">Back to List</button>
+    <a asp-action="Edit" asp-route-id="@Model?.ProductId" class="btn btn-primary fw-bold">Edit</a>
+    <a asp-action="Index" asp-route-categoryId="@Model.CategoryId" class="btn btn-primary float-end fw-bold">Back to List</a>
 </div>
