--- a/Northwind.Application/Views/Products/Edit.cshtml
+++ b/Northwind.Application/Views/Products/Edit.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Edit";
 }
 
+<head>
+    <link href="@Url.Content("~/css/details.css")" rel="stylesheet" type="text/css" />
+</head>
+
 <h1>Edit</h1>
 
 <h4>Product</h4>
@@ -13,19 +17,20 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId" />
+            <input type="hidden" asp-for="CategoryId" />
             <div class="form-group">
                 <label asp-for="ProductName" class="control-label"></label>
                 <input asp-for="ProductName" class="form-control" />
                 <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SupplierId" class="control-label"></label>
-                <select asp-for="SupplierId" class="form-control" asp-items="ViewBag.SupplierId"></select>
+                <label class="control-label">Supplier</label>
+                <select asp-for="SupplierId" class="form-select" asp-items="ViewBag.SupplierIds"></select>
                 <span asp-validation-for="SupplierId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                <label class="control-label">Category</label>
+                <select asp-for="CategoryId" class="form-select" asp-items="ViewBag.CategoryIds"></select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -48,14 +53,10 @@
                     <input class="form-check-input" asp-for="Discontinued" /> @Html.DisplayNameFor(model => model.Discontinued)
                 </label>
             </div>
-            <div class="form-group">
+            <div style="padding-top:20px;">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Details" asp-route-id="@Model.ProductId" class="btn btn-primary float-end">Back</a>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
