--- a/Northwind.Application/Views/Employees/Index.cshtml
+++ b/Northwind.Application/Views/Employees/Index.cshtml
@@ -25,7 +25,7 @@
     </button>
 
     <input onchange="onChangeSelectAllHandler(this.checked)" id="selectAllCheckbox" style="margin-left:20px;" type="checkbox" hidden />
-    <label id="selectAllSpan" for="selectAllCheckbox" hidden>Select all Employees</label>
+    <label id="selectAllSpan" for="selectAllCheckbox" hidden>Select all</label>
 
     <button form="form" class="btn btn-danger float-end" type="submit" id="deleteButton" hidden>
         Delete
