--- a/Northwind.Application/Views/Employees/Delete.cshtml
+++ b/Northwind.Application/Views/Employees/Delete.cshtml
@@ -30,7 +30,7 @@
             </tr>
         </thead>
         <tbody>
-            <form asp-action="DeleteConfirmed" method="post">
+            <form id="form" asp-action="DeleteConfirmed" method="post">
                 @foreach (var item in Model)
                 {
                     <input asp-for="@item.EmployeeId" name="ids" type="hidden" />
@@ -49,9 +49,9 @@
                         </td>
                     </tr>
                 }
-                <button class="btn btn-danger" type="submit">Delete</button>
             </form>
-            <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", $"{guest}Employees")'">Back to List</button>
         </tbody>
     </table>
+    <button form="form" class="btn btn-danger" type="submit">Delete</button>
+    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", $"{guest}Employees")'">Back to List</button>
 </div>
