--- a/Northwind.Application/Views/Products/Create.cshtml
+++ b/Northwind.Application/Views/Products/Create.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Category</label>
-                <select asp-for="CategoryId" class ="form-select" asp-items="ViewBag.CategoryIds"></select>
+                <select asp-for="CategoryId" class="form-select" asp-items="ViewBag.CategoryIds"></select>
             </div>
             <div class="form-group">
                 <label class="control-label">Supplier</label>
@@ -37,7 +37,7 @@
         </form>
         <div style="padding-top:20px;">
             <input form="form" type="submit" value="Create" class="btn btn-primary" />
-            <a asp-action="Index" asp-route-categoryId="ViewBag.CategoryId" class="btn btn-primary float-end">Back to List</a>
+            <a asp-action="Index" asp-route-categoryId="@((int)ViewBag.CategoryId)" class="btn btn-primary float-end">Back to List</a>
         </div>
     </div>
 </div>
