--- a/Northwind.Application/Views/Categories/Index.cshtml
+++ b/Northwind.Application/Views/Categories/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<Northwind.Application.Models.Category.CategoryIndexModel>
 @{
     ViewData["Title"] = "Categories";
-    ViewData["Role"] = User.IsInRole("guest") ? "Guest" : "";
 }
 
 @functions
 {
-    string GetDetailsLink(int id) => Url.ActionLink("Details", $"{ViewData["Role"]}Categories", new { id = id });
+    string GetDetailsLink(int id) => Url.ActionLink("Details", "Categories", new { id = id }) ?? "/Home/Index";
+    string IsDisabled() => User.IsInRole("admin") ? "" : "disabled";
 }
 
 <head>
@@ -16,11 +16,11 @@
 <h1>Categories</h1>
 
 <div>
-    <button class="btn btn-primary" onclick="location.href = '@Url.ActionLink("Create", $"{ViewData["Role"]}Categories")'">
+    <button class="btn btn-primary" onclick="location.href = '@Url.ActionLink("Create", "Categories")'" type="button" @IsDisabled()>
         Create New
     </button>
 
-    <button class="btn btn-primary" id="editButton" style="margin-left:20px;" type="button">
+    <button class="btn btn-primary" id="editButton" style="margin-left:20px;" type="button" @IsDisabled()>
         Select
     </button>
 
