--- a/Northwind.Application/Views/Employees/Delete.cshtml
+++ b/Northwind.Application/Views/Employees/Delete.cshtml
@@ -2,7 +2,6 @@
 
 @{
     var count = Model.Count();
-    var guest = User.IsInRole("guest") ? "Guest" : "";
     ViewData["Title"] = "Delete";
 }
 
@@ -53,5 +52,5 @@
         </tbody>
     </table>
     <button form="form" class="btn btn-danger" type="submit">Delete</button>
-    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", $"{guest}Employees")'">Back to List</button>
+    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", "Employees")'">Back to List</button>
 </div>
