--- a/Northwind.Application/Views/Products/Delete.cshtml
+++ b/Northwind.Application/Views/Products/Delete.cshtml
@@ -48,5 +48,5 @@
     </table>
 
     <button class="btn btn-danger" form="form" type="submit">Delete</button>
-    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", $"{guest}Products", new { categoryId = Model.Products.First().CategoryId })'">Back to List</button>
+    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", $"{guest}Products", new { categoryId = Model.Products!.First().CategoryId })'">Back to List</button>
 </div>
