--- a/Northwind.Application/Views/Roles/Edit.cshtml
+++ b/Northwind.Application/Views/Roles/Edit.cshtml
@@ -9,7 +9,7 @@
         @foreach (IdentityRole role in Model.AllRoles)
         {
             <input type="checkbox" name="roles" value="@role.Name"
-            @(Model.UserRoles.Contains(role.Name) ? "checked=\"checked\"" : "") />
+            @(Model.UserRoles.Contains(role.Name!) ? "checked=\"checked\"" : "") />
 
             @role.Name <br />
         }
