--- a/Northwind.Application/Views/Category/Delete.cshtml
+++ b/Northwind.Application/Views/Category/Delete.cshtml
@@ -47,5 +47,5 @@
         </tbody>
     </table>
     <button form="form" class="btn btn-danger" type="submit">Delete</button>
-    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", "Categories")'">Back to List</button>
+    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", "Category")'">Back to List</button>
 </div>
