--- a/Northwind.Application/Views/Category/Details.cshtml
+++ b/Northwind.Application/Views/Category/Details.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayNameFor(model => model.Products)
         </dt>
         <dd class="col-sm-10">
-            <a asp-action="Index" asp-controller="Products" asp-route-categoryId="@Model.CategoryId" class="fw-bold">Product List</a>
+            <a asp-action="Index" asp-controller="Product" asp-route-categoryId="@Model.CategoryId" class="fw-bold">Product List</a>
         </dd>
     </dl>
 </div>
