--- a/Northwind.Application/Views/Employee/Delete.cshtml
+++ b/Northwind.Application/Views/Employee/Delete.cshtml
@@ -52,5 +52,5 @@
         </tbody>
     </table>
     <button form="form" class="btn btn-danger" type="submit">Delete</button>
-    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", "Employees")'">Back to List</button>
+    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", "Employee")'">Back to List</button>
 </div>
