--- a/Northwind.Application/Views/Product/Delete.cshtml
+++ b/Northwind.Application/Views/Product/Delete.cshtml
@@ -1,8 +1,7 @@
-﻿@model Northwind.Application.Models.Product.ProductsForCategoryModel
+﻿@model Northwind.Application.Models.Product.ProductForCategoryModel
 
 @{
     var count = Model.Count();
-    var guest = User.IsInRole("guest") ? "Guest" : "";
     ViewData["Title"] = "Delete";
 }
 
@@ -48,5 +47,5 @@
     </table>
 
     <button class="btn btn-danger" form="form" type="submit">Delete</button>
-    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", $"{guest}Products", new { categoryId = Model.Products!.First().CategoryId })'">Back to List</button>
+    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", $"Product", new { categoryId = Model.Products!.First().CategoryId })'">Back to List</button>
 </div>
