--- a/Northwind.Application/Views/Shared/_TableFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_TableFormPartial.cshtml
@@ -80,7 +80,7 @@
                             }
                         </td>
                     }
-                    <td class="text-center" style="min-width:50px;">
+                    <td class="text-center align-content-center" style="min-width:50px;">
                         <input name="ids" type="checkbox" id="@GetId(item)" value="@GetId(item)" onclick="onChangeHandler(this)" hidden />
                     </td>
                 </tr>
