--- a/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
@@ -35,10 +35,10 @@
                 <div style="cursor:pointer" onclick="location.href = '@GetDetailsLink(GetId(item))'">
                     <img src="data:image/bmp;base64,@Convert.ToBase64String(GetPropertyValue<byte[]>(item, "Picture", "Photo", "Image") as byte[] ?? new byte[0])" style="height:120px;width:120px;" />
                 </div>
-                <div class="text-xl-center">
+                <div class="text-xl-center fw-bold m-2">
                     @(GetPropertyValue<string>(item, "Name") as string)
                 </div>
-                <div class="text-xl-center">
+                <div class="text-center align-content-center">
                     <input name="ids" type="checkbox" id="@GetId(item)" value="@GetId(item)" onclick="onChangeHandler(this)" hidden />
                 </div>
             </div>
