Solved integration tests issue

--- a/Northwind.Application/Views/Category/Index.cshtml
+++ b/Northwind.Application/Views/Category/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<Northwind.Application.Models.Category.CategoryIndexModel>
 @{
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
+    ViewData["ControllerName"] = "Category";
     ViewData["ActionName"] = "Delete";
 }
 
