--- a/Northwind.Application/Views/Employee/Index.cshtml
+++ b/Northwind.Application/Views/Employee/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<Northwind.Application.Models.Employee.EmployeeIndexModel>
 @{
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
+    ViewData["ControllerName"] = "Employee";
     ViewData["ActionName"] = "Delete";
 }
 
