--- a/Northwind.Application/Views/Product/Index.cshtml
+++ b/Northwind.Application/Views/Product/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<Northwind.Application.Models.Product.ProductIndexModel>
 @{
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
+    ViewData["ControllerName"] = "Product";
     ViewData["ActionName"] = "Delete";
 }
 
