--- a/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
@@ -3,7 +3,7 @@
 @model IEnumerable<object>
 
 @functions {
-    string ControllerName => this.Context.Request.Path.ToString().TrimStart('/');
+    string ControllerName => (ViewData["ControllerName"] ?? Model.First().GetType().Name).ToString()!;
 
     PropertyInfo[] Properties => base.Model.First().GetType().GetProperties();
 
