--- a/Northwind.Application/Views/Category/Details.cshtml
+++ b/Northwind.Application/Views/Category/Details.cshtml
@@ -1,46 +1,11 @@
-﻿@using Northwind.Bll.Enums
-@using Northwind.Bll.Services
-@model Northwind.Data.Entities.Category
+﻿@model Northwind.Data.Entities.Category
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["PreviousPage"] = ViewBag.PreviousPage;
+    ViewData["ControllerName"] = "Category";
 }
 
-<head>
-    <link href="@Url.Content("~/css/details.css")" rel="stylesheet" type="text/css" />
-</head>
-
 <h1>Details</h1>
+<h4>Category</h4>
 
-<div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Picture)
-        </dt>
-        <dd class="col-sm-10">
-            <img src="data:image/bmp;base64,@Convert.ToBase64String(ImageConverter.ConvertNorthwindPhoto(Model.Picture!, ImageHeaders.Category))" style="height:120px;width:120px;" />
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoryName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Products)
-        </dt>
-        <dd class="col-sm-10">
-            <a asp-action="Index" asp-controller="Product" asp-route-categoryId="@Model.CategoryId" class="fw-bold">Product List</a>
-        </dd>
-    </dl>
-</div>
-<button class="btn btn-primary fw-bold" @(User.IsInRole("admin") ? "" : "disabled") onclick="location.href = '@Url.ActionLink("Edit", "Categories", new { id = Model.CategoryId })'">Edit</button>
-<a asp-action="Index" class="btn btn-primary float-end fw-bold">Back to List</a>
+@await Html.PartialAsync("_DetailsPartial", Model, ViewData)
